Updated signup for better errors

--- a/beers/templates/registration/signup.html
+++ b/beers/templates/registration/signup.html
@@ -21,50 +21,77 @@
     <div class="login-form">
       <div class="login-label">{{ form.username.label_tag }}</div>
       <div class="login-field">{{ form.username }}</div>
-      <div class="login-field">
+      {% if form.username.errors %}
+      <div class="error-info">
+        {{ form.username.label }} Errors:<br/>
         {{ form.username.errors }}
       </div>
+      {% endif %}
       <div class="login-label">{{ form.first_name.label_tag }}</div>
       <div class="login-field">{{ form.first_name }}</div>
-      <div class="login-field">
+      {% if form.first_name.errors %}
+      <div class="error-info">
+        {{ form.first_name.label }} Errors:<br/>
         {{ form.first_name.errors }}
       </div>
+      {% endif %}
       <div class="login-label">{{ form.last_name.label_tag }}</div>
       <div class="login-field">{{ form.last_name }}</div>
-      <div class="login-field">
+      {% if form.last_name.errors %}
+      <div class="error-info">
+        {{ form.last_name.label }} Errors:<br/>
         {{ form.last_name.errors }}
       </div>
+      {% endif %}
       <div class="login-label">{{ form.email.label_tag }}</div>
       <div class="login-field">{{ form.email }}</div>
-      <div class="login-field">
+      {% if form.email.errors %}
+      <div class="error-info">
+        {{ form.email.label }} Errors:<br/>
         {{ form.email.errors }}
       </div>
+      {% endif %}
       <div class="login-label">{{ form.personal_statement.label_tag }}</div>
       <div class="login-field">{{ form.personal_statement }}</div>
-      <div class="login-field">
+      {% if form.personal_statement.errors %}
+      <div class="error-info">
+        {{ form.personal_statement.label }} Errors:<br/>
         {{ form.personal_statement.errors }}
       </div>
+      {% endif %}
       <div class="login-label">{{ form.untappd_username.label_tag }}</div>
       <div class="login-field">{{ form.untappd_username }}</div>
-      <div class="login-field">
+      {% if form.untappd_username.errors %}
+      <div class="error-info">
+        {{ form.untappd_username.label }} Errors:<br/>
         {{ form.untappd_username.errors }}
       </div>
+      {% endif %}
       <div class="login-label">{{ form.untappd_rss.label_tag }}</div>
       <div class="field-help">{{ form.untappd_rss.help_text }}</div>
       <div class="login-field">{{ form.untappd_rss }}</div>
-      <div class="login-field">
+      {% if form.untappd_rss.errors %}
+      <div class="error-info">
+        {{ form.untappd_rss.label }} Errors:<br/>
         {{ form.untappd_rss.errors }}
       </div>
+      {% endif %}
       <div class="login-label">{{ form.password.label_tag }}</div>
       <div class="login-field">{{ form.password }}</div>
-      <div class="login-field">
+      {% if form.password.errors %}
+      <div class="error-info">
+        {{ form.password.label }} Errors:<br/>
         {{ form.password.errors }}
       </div>
+      {% endif %}
       <div class="login-label">{{ form.password_repeat.label_tag }}</div>
       <div class="login-field">{{ form.password_repeat }}</div>
-      <div class="login-field">
+      {% if form.password_repeat.errors %}
+      <div class="error-info">
+        {{ form.password_repeat.label }} Errors:<br/>
         {{ form.password_repeat.errors }}
       </div>
+      {% endif %}
 
       <div class="login-button-row">
         <input type="submit" value="Signup"/>
