--- a/beers/templates/beers/index.html
+++ b/beers/templates/beers/index.html
@@ -57,4 +57,9 @@
 			</div>
 		</div>
 	</div>
+	<div style="clear: both">&nbsp;</div>
+
+	<div style="margin-top: 1em; text-align: center">
+	See the <a href="{% url 'instructions' %}">instructions</a> for more details!
+	</div>
 {% endblock %}
