--- a/beers/templates/beers/contest-add.html
+++ b/beers/templates/beers/contest-add.html
@@ -5,11 +5,48 @@
 {% endblock %}
 
 {% block content %}
+{% if form.non_field_errors %}
+<div class="error-info">
+  <ul>
+    {% for k, v in form.errors.items %}
+      {% for e in v %}
+        <li>{{ k }}: {{ e }}</li>
+      {% endfor %}
+    {% endfor %}
+  </ul>
+</div>
+{% endif %}
+
   <form action="{% url 'contest-add' %}" method="post">
     {% csrf_token %}
-    <table>
-      {{ form.as_table }}
-    </table>
-    <input type="submit" value="Add Contest"/>
+    <div class="login-form">
+      <div class="login-label">{{ form.name.label_tag }}</div>
+      <div class="login-field">{{ form.name }}</div>
+      {% if form.name.errors %}
+      <div class="error-info">
+        {{ form.name.label }} Errors:<br/>
+        {{ form.name.errors }}
+      </div>
+      {% endif %}
+      <div class="login-label">{{ form.start_date.label_tag }}</div>
+      <div class="login-field">{{ form.start_date }}</div>
+      {% if form.start_date.errors %}
+      <div class="error-info">
+        {{ form.start_date.label }} Errors:<br/>
+        {{ form.start_date.errors }}
+      </div>
+      {% endif %}
+      <div class="login-label">{{ form.end_date.label_tag }}</div>
+      <div class="login-field">{{ form.end_date }}</div>
+      {% if form.end_date.errors %}
+      <div class="error-info">
+        {{ form.end_date.label }} Errors:<br/>
+        {{ form.end_date.errors }}
+      </div>
+      {% endif %}
+      <div class="login-button-row">
+        <input type="submit" value="Add Contest"/>
+      </div>
+    </div>
   </form>
 {% endblock %}
