--- a/beers/templates/base/base.html
+++ b/beers/templates/base/base.html
@@ -3,6 +3,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="{% static "css/beers.css" %}"/>
+		{% block scripts %}{% endblock %}
     <title>{% block title %}One Hundred Beers - Login{% endblock %}</title>
 	</head>
 	<body>
