--- a/beers/templates/beers/contest.html
+++ b/beers/templates/beers/contest.html
@@ -7,9 +7,14 @@
 
 	<div class="three-column-box" style="height: 10em;">
 		<div class="outset-column-box">
-			<h3>Leaderboards</h3>
+			<div class="column-box-content">
+				<h3>Leaderboards</h3>
 
-			Coming soon
+				Check out how the competition is doing!
+			</div>
+			<div class="column-box-link">
+				<a href="{% url 'leaderboard' contest.id %}">Leaderboard&gt;</a>
+			</div>
 		</div>
 		<div class="outset-column-box">
 			<div class="column-box-content">
