Link bt leaderboard and beer list

--- a/beers/templates/beers/contest-beers.html
+++ b/beers/templates/beers/contest-beers.html
@@ -13,6 +13,10 @@
 {% block content %}
 <h2>What We're Drinking</h2>
 
+<p>
+  See the <a href="{% url 'leaderboard' contest.id %}">Leaderboard</a>
+</p>
+
 <div class="contest-beerlist">
   <table id="beerlist" class="tablesorter">
     <thead>
