--- a/beers/templates/beers/contest-leaderboard.html
+++ b/beers/templates/beers/contest-leaderboard.html
@@ -5,6 +5,10 @@
 {% block content %}
 <h2>Leaderboard</h2>
 
+<p>
+  See the <a href="{% url 'beer-list' contest.id %}">Beer list</a>
+</p>
+
 <div class="contest-leaderboard">
   <table>
     <tr>
