--- a/hundred_beers/static/css/beers.css
+++ b/hundred_beers/static/css/beers.css
@@ -51,8 +51,16 @@ body {
   text-decoration: none;
   text-decoration-color: dimgray;
 }
+/* line 106, ../../../styles/sass/beers.scss */
+.header-login-box .profile-image {
+  max-height: 20px;
+  max-width: 20px;
+  height: auto;
+  width: auto;
+  vertical-align: bottom;
+}
 
-/* line 108, ../../../styles/sass/beers.scss */
+/* line 115, ../../../styles/sass/beers.scss */
 .footer {
   height: 2em;
   color: lightgrey;
@@ -64,65 +72,65 @@ body {
   font-size: 0.5em;
 }
 
-/* line 119, ../../../styles/sass/beers.scss */
+/* line 126, ../../../styles/sass/beers.scss */
 #topimage {
   width: 100%;
 }
 
-/* line 124, ../../../styles/sass/beers.scss */
+/* line 131, ../../../styles/sass/beers.scss */
 .content {
   font-family: Helvetica, sans-serif;
   margin-left: 1.5rem;
   margin-bottom: 1.5rem;
   width: 100%;
 }
-/* line 130, ../../../styles/sass/beers.scss */
+/* line 137, ../../../styles/sass/beers.scss */
 .content h1 {
   font-size: 2.5rem;
   color: #5c5c5c;
 }
-/* line 136, ../../../styles/sass/beers.scss */
+/* line 143, ../../../styles/sass/beers.scss */
 .content h2 {
   font-size: 2rem;
   color: #767676;
 }
 
-/* line 144, ../../../styles/sass/beers.scss */
+/* line 151, ../../../styles/sass/beers.scss */
 #pstmt {
   font-size: 1.25em;
 }
 
-/* line 149, ../../../styles/sass/beers.scss */
+/* line 156, ../../../styles/sass/beers.scss */
 .core-table table, .player-beers table, .contest-summary-list table, .contests table, .contest-leaderboard table, .contest-beerlist table {
   background-color: white;
   width: 100%;
 }
-/* line 152, ../../../styles/sass/beers.scss */
+/* line 159, ../../../styles/sass/beers.scss */
 .core-table table th, .player-beers table th, .contest-summary-list table th, .contests table th, .contest-leaderboard table th, .contest-beerlist table th {
   height: 1.5em;
   font-size: 1rem;
   background-color: white;
 }
-/* line 157, ../../../styles/sass/beers.scss */
+/* line 164, ../../../styles/sass/beers.scss */
 .core-table table tr, .player-beers table tr, .contest-summary-list table tr, .contests table tr, .contest-leaderboard table tr, .contest-beerlist table tr {
   height: 1.25em;
   font-size: 0.9rem;
 }
-/* line 161, ../../../styles/sass/beers.scss */
+/* line 168, ../../../styles/sass/beers.scss */
 .core-table table td, .player-beers table td, .contest-summary-list table td, .contests table td, .contest-leaderboard table td, .contest-beerlist table td {
   background-color: #dfc8b9;
   padding: 0.5em;
   margin: 0.5em;
 }
 
-/* line 169, ../../../styles/sass/beers.scss */
+/* line 176, ../../../styles/sass/beers.scss */
 .player-beers {
   width: 80%;
   margin-left: 3em;
   margin-top: 0.5em;
 }
 
-/* line 176, ../../../styles/sass/beers.scss */
+/* line 183, ../../../styles/sass/beers.scss */
 .contest-summary-list {
   float: right;
   vertical-align: text-top;
@@ -131,28 +139,28 @@ body {
   margin: 0.25em;
 }
 
-/* line 185, ../../../styles/sass/beers.scss */
+/* line 192, ../../../styles/sass/beers.scss */
 .contests {
   width: 80%;
   margin-left: 6em;
   margin-top: 2em;
 }
 
-/* line 192, ../../../styles/sass/beers.scss */
+/* line 199, ../../../styles/sass/beers.scss */
 .contest-leaderboard {
   width: 80%;
   margin-left: 3em;
   margin-top: 0.5em;
 }
 
-/* line 199, ../../../styles/sass/beers.scss */
+/* line 206, ../../../styles/sass/beers.scss */
 .contest-beerlist {
   width: 80%;
   margin-left: 3em;
   margin-top: 0.5em;
 }
 
-/* line 206, ../../../styles/sass/beers.scss */
+/* line 213, ../../../styles/sass/beers.scss */
 .three-column-box {
   display: flex;
   width: 100%;
@@ -162,7 +170,7 @@ body {
   margin-top: 2em;
 }
 
-/* line 215, ../../../styles/sass/beers.scss */
+/* line 222, ../../../styles/sass/beers.scss */
 .column-box, .outset-column-box {
   width: 25%;
   margin-left: 0.5em;
@@ -172,11 +180,11 @@ body {
   text-align: center;
   height: 100%;
 }
-/* line 224, ../../../styles/sass/beers.scss */
+/* line 231, ../../../styles/sass/beers.scss */
 .column-box .column-box-content, .outset-column-box .column-box-content {
   height: 80%;
 }
-/* line 228, ../../../styles/sass/beers.scss */
+/* line 235, ../../../styles/sass/beers.scss */
 .column-box .column-box-link, .outset-column-box .column-box-link {
   text-align: right;
   font-size: 0.8em;
@@ -184,14 +192,14 @@ body {
   vertical-align: text-bottom;
 }
 
-/* line 236, ../../../styles/sass/beers.scss */
+/* line 243, ../../../styles/sass/beers.scss */
 .outset-column-box {
   background-color: lightgrey;
   box-shadow: 0.3em 0.3em 0.1em darkgrey;
   padding-bottom: 1em;
 }
 
-/* line 243, ../../../styles/sass/beers.scss */
+/* line 250, ../../../styles/sass/beers.scss */
 img.column-icon {
   display: block;
   width: 50%;
@@ -200,7 +208,7 @@ img.column-icon {
   margin-right: auto;
 }
 
-/* line 251, ../../../styles/sass/beers.scss */
+/* line 258, ../../../styles/sass/beers.scss */
 .login-box {
   width: 34.125em;
   display: block;
@@ -208,7 +216,7 @@ img.column-icon {
   margin-right: auto;
 }
 
-/* line 260, ../../../styles/sass/beers.scss */
+/* line 267, ../../../styles/sass/beers.scss */
 .login-form {
   display: flex;
   flex-direction: column;
@@ -221,13 +229,13 @@ img.column-icon {
   padding: 1em;
 }
 
-/* line 272, ../../../styles/sass/beers.scss */
+/* line 279, ../../../styles/sass/beers.scss */
 .login-field {
   width: 30em;
   float: left;
   padding-bottom: 0.75em;
 }
-/* line 276, ../../../styles/sass/beers.scss */
+/* line 283, ../../../styles/sass/beers.scss */
 .login-field input {
   font-size: 1.25em;
   width: 23.8em;
@@ -236,25 +244,25 @@ img.column-icon {
   height: 1.5em;
 }
 
-/* line 285, ../../../styles/sass/beers.scss */
+/* line 292, ../../../styles/sass/beers.scss */
 .error-info {
   float: left;
   font-weight: bold;
   color: maroon;
 }
 
-/* line 291, ../../../styles/sass/beers.scss */
+/* line 298, ../../../styles/sass/beers.scss */
 .login-button-row {
   width: 100%;
   padding-bottom: 0.75em;
 }
-/* line 295, ../../../styles/sass/beers.scss */
+/* line 302, ../../../styles/sass/beers.scss */
 .login-button-row input[type=submit] {
   font-size: 1.25em;
   float: right;
 }
 
-/* line 301, ../../../styles/sass/beers.scss */
+/* line 308, ../../../styles/sass/beers.scss */
 .login-label {
   font-size: 1em;
   font-weight: bold;
@@ -265,7 +273,7 @@ img.column-icon {
   margin-bottom: 0.25em;
 }
 
-/* line 311, ../../../styles/sass/beers.scss */
+/* line 318, ../../../styles/sass/beers.scss */
 .field-help {
   font-size: 0.75rem;
   height: 0.8rem;
@@ -274,13 +282,13 @@ img.column-icon {
   margin-bottom: 0.25rem;
 }
 
-/* line 319, ../../../styles/sass/beers.scss */
+/* line 326, ../../../styles/sass/beers.scss */
 .validations {
   width: 90%;
   margin-left: 1em;
 }
 
-/* line 326, ../../../styles/sass/beers.scss */
+/* line 333, ../../../styles/sass/beers.scss */
 .validation-button {
   -moz-box-shadow: 0px 10px 14px -7px #276873;
   -webkit-box-shadow: 0px 10px 14px -7px #276873;
@@ -300,18 +308,18 @@ img.column-icon {
   text-shadow: 0px 1px 0px #3d768a;
 }
 
-/* line 344, ../../../styles/sass/beers.scss */
+/* line 351, ../../../styles/sass/beers.scss */
 .validation-button:hover {
   background-color: #3c7083;
 }
 
-/* line 347, ../../../styles/sass/beers.scss */
+/* line 354, ../../../styles/sass/beers.scss */
 .validation-button:active {
   position: relative;
   top: 1px;
 }
 
-/* line 352, ../../../styles/sass/beers.scss */
+/* line 359, ../../../styles/sass/beers.scss */
 .validation-button:disabled {
   background-color: dimgrey;
   -moz-box-shadow: inset 0px 10px 14px -7px #5c5c5c;
@@ -319,7 +327,7 @@ img.column-icon {
   box-shadow: inset 0px 10px 14px -7px #5c5c5c;
 }
 
-/* line 359, ../../../styles/sass/beers.scss */
+/* line 366, ../../../styles/sass/beers.scss */
 .validation-box {
   width: 40em;
   margin-bottom: 0.25em;
@@ -331,7 +339,7 @@ img.column-icon {
   flex-direction: row;
 }
 
-/* line 370, ../../../styles/sass/beers.scss */
+/* line 377, ../../../styles/sass/beers.scss */
 .validation-column, .validation-lines, .validation-buttons {
   display: flex;
   flex-direction: column;
@@ -339,20 +347,20 @@ img.column-icon {
   padding-bottom: 0.5em;
 }
 
-/* line 377, ../../../styles/sass/beers.scss */
+/* line 384, ../../../styles/sass/beers.scss */
 .validation-lines {
   width: 100%;
   padding-left: 1em;
   padding-right: 1em;
 }
 
-/* line 384, ../../../styles/sass/beers.scss */
+/* line 391, ../../../styles/sass/beers.scss */
 .validation-buttons {
   width: 25%;
   padding-right: 1em;
 }
 
-/* line 390, ../../../styles/sass/beers.scss */
+/* line 397, ../../../styles/sass/beers.scss */
 .validation-button-line {
   margin-top: 0.25em;
   margin-bottom: 0.25em;
@@ -360,41 +368,41 @@ img.column-icon {
   text-align: center;
 }
 
-/* line 397, ../../../styles/sass/beers.scss */
+/* line 404, ../../../styles/sass/beers.scss */
 .validation-text-line, .validation-beer-line, .validation-brewery-line, .validation-user-line, .validation-match-line {
   margin-top: 0.1em;
   margin-bottom: 0.1em;
 }
 
-/* line 402, ../../../styles/sass/beers.scss */
+/* line 409, ../../../styles/sass/beers.scss */
 .validation-beer-line {
   font-size: 1.25em;
   font-weight: bolder;
 }
-/* line 406, ../../../styles/sass/beers.scss */
+/* line 413, ../../../styles/sass/beers.scss */
 .validation-beer-line a {
   font-size: 0.9rem;
   font-weight: lighter;
 }
 
-/* line 412, ../../../styles/sass/beers.scss */
+/* line 419, ../../../styles/sass/beers.scss */
 .validation-brewery-line {
   font-size: 0.9em;
 }
 
-/* line 417, ../../../styles/sass/beers.scss */
+/* line 424, ../../../styles/sass/beers.scss */
 .validation-user-line {
   font-size: 0.9em;
 }
 
-/* line 422, ../../../styles/sass/beers.scss */
+/* line 429, ../../../styles/sass/beers.scss */
 .validation-match-line {
   font-weight: bolder;
   font-size: 1em;
   color: #00b100;
 }
 
-/* line 429, ../../../styles/sass/beers.scss */
+/* line 436, ../../../styles/sass/beers.scss */
 .validation-detail {
   float: left;
   font-size: 0.75em;
@@ -402,19 +410,19 @@ img.column-icon {
   margin-right: 0.25em;
 }
 
-/* line 436, ../../../styles/sass/beers.scss */
+/* line 443, ../../../styles/sass/beers.scss */
 .validation-link {
   float: left;
   font-size: 0.75em;
 }
 
-/* line 441, ../../../styles/sass/beers.scss */
+/* line 448, ../../../styles/sass/beers.scss */
 .pager {
   margin-top: 0.25em;
   margin-bottom: 1em;
 }
 
-/* line 446, ../../../styles/sass/beers.scss */
+/* line 453, ../../../styles/sass/beers.scss */
 .dialog-overlay {
   visibility: hidden;
   position: absolute;
@@ -426,7 +434,7 @@ img.column-icon {
   z-index: 1000;
 }
 
-/* line 457, ../../../styles/sass/beers.scss */
+/* line 464, ../../../styles/sass/beers.scss */
 .dialog-box {
   background-color: darkgrey;
 }
