--- a/beers/templates/beers/index.html
+++ b/beers/templates/beers/index.html
@@ -59,6 +59,18 @@
 	</div>
 	<div style="clear: both">&nbsp;</div>
 
+	<div class="quicklinks">
+		<h4>Quick Links</h4>
+
+		<ul>
+		{% for c in contests %}
+		<li>
+			<a href="{% url 'contest' contest_id=c.id %}">{{ c.name }}</a> <span style="font-size: 0.9em">(Other Links: <a href="{% url 'leaderboard' contest_id=c.id %}">Leaderboard</a>&nbsp;&nbsp;<a href="{% url 'beer-list' contest_id=c.id %}">Beers</a>)</span>
+		</li>
+		{% endfor %}
+		</ul>
+	</div>
+
 	<div style="margin-top: 1em; text-align: center">
 	See the <a href="{% url 'instructions' %}">instructions</a> for more details!
 	</div>
