Added points to leaderboard view

--- a/beers/templates/beers/contest-leaderboard.html
+++ b/beers/templates/beers/contest-leaderboard.html
@@ -22,6 +22,9 @@
         Total Beers
       </th>
       <th>
+        Points
+      </th>
+      <th>
         Last Beer Drank
       </th>
     </tr>
@@ -35,6 +38,9 @@
       </td>
       <td>
         {{ p.beer_count }}
+      </td>
+      <td>
+        {{ p.beer_points }}
       </td>
       <td>
         {{ p.last_checkin_beer }}
